[gd_scene load_steps=3 format=3 uid="uid://c6diigt41pq5e"]

[ext_resource type="Script" path="res://ui/ui.gd" id="1_ky3au"]
[ext_resource type="Script" path="res://ui/ui_menu_cursor.gd" id="1_sdjvs"]

[node name="UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ky3au")

[node name="UIMenuCursor" type="Label" parent="."]
visible = false
top_level = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
script = ExtResource("1_sdjvs")

[node name="CenteredMenus" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UncenteredMenus" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
